asg/tests/pass/group/y_sign_inferred.leo
function main() {
    const element = (_, 1)group;
}