asg/tests/fail/integers/u8/min_fail.leo
function main() {
    const a: u8 = -1;
}